todo add on htmlList

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
             <h1>ToDo Application</h1>
             <input type="text " id="InputType" placeholder="Write your next todo here......">
             <button id="ToDoType">AddToDo</button>
+            <ul id="todolist">
+
+            </ul>
       </div>
+     
    <script src="script.js"></script> 
 </body>
 </html>
