all btn added in todolist

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
             <h1>ToDo Application</h1>
             <input type="text " id="InputType" placeholder="Write your next todo here......">
             <button id="ToDoType">AddToDo</button>
+            <br>
+            <button id="filterbtn" data-filter="All">All</button>
+            <button id="filterbtn" data-filter="Completed">Completed</button>
+            <button id="filterbtn" data-filter="Pending">Pending</button>
             <ul id="todolist">
 
             </ul>
