--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             <input type="text " id="InputType" placeholder="Write your next todo here......">
             <button id="ToDoType">AddToDo</button>
             <br>
-            <button id="filterbtn" data-filter="All">All</button>
-            <button id="filterbtn" data-filter="Completed">Completed</button>
-            <button id="filterbtn" data-filter="Pending">Pending</button>
+            <button class="filterbtn" data-filter="All">All</button>
+            <button class="filterbtn" data-filter="Completed">Completed</button>
+            <button class="filterbtn" data-filter="Pending">Pending</button>
             <ul id="todolist">
 
             </ul>
